--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/school_panel
 spring.datasource.username=school_panel
 spring.datasource.password=school_panel@server
-
+server.port=9000
