--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.19.0.1}:3306/school_panel
+#spring.datasource.url=jdbc:mysql://172.19.0.1:3306/school_panel
+spring.datasource.username=school_panel
+spring.datasource.password=school_panel@server
+server.port=9000
+
 
