--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,18 @@
+# spring.jpa.hibernate.ddl-auto=update
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.19.0.1}:3306/school_panel
+# #spring.datasource.url=jdbc:mysql://172.19.0.1:3306/school_panel
+# spring.datasource.username=school_panel
+# spring.datasource.password=school_panel@server
+# server.port=9000
+
+spring.jpa.open-in-view=false
+
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:172.19.0.1}:3306/school_panel
-#spring.datasource.url=jdbc:mysql://172.19.0.1:3306/school_panel
-spring.datasource.username=school_panel
+# spring.datasource.url=jdbc:mysql://${MYSQL_HOST:school_panel_net}:3306/school_panel
+# spring.datasource.url=jdbc:mysql://172.19.0.1:3306/school_panel
+# spring.datasource.url=jdbc:mysql://school_panel_net:3306/school_panel
+spring.datasource.url=jdbc:mysql://school_panel_db:3306/school_panel
+# spring.datasource.username=school_panel
+spring.datasource.username=root
 spring.datasource.password=school_panel@server
 server.port=9000
-
-
