--- a/pom.xml
+++ b/pom.xml
@@ -62,12 +62,20 @@ xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/x
 				<artifactId>junit-vintage-engine</artifactId>
 			</exclusion>
 		</exclusions>
-	</dependency>
+	</dependency> 
 	<dependency>
 		<groupId>org.springframework.restdocs</groupId>
 		<artifactId>spring-restdocs-mockmvc</artifactId>
 		<scope>test</scope>
 	</dependency>
+	<!-- https://mvnrepository.com/artifact/junit/junit -->
+  <dependency>
+      <groupId>junit</groupId>
+      <artifactId>junit</artifactId>
+      <version>4.12</version>
+      <scope>test</scope>
+  </dependency>
+
 	<!--
 		<dependency>
 			<groupId>org.springframework.security</groupId>
